# thearete

./: .gitignore  CLAUDE.md  MCP_SETUP.md  README.md  프롬프트
backend/: .env.bak  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  nginx.conf  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03486deed5aa_add_treatment_name_column.py  0984d45fd884_add_session_name_to_treatment_session.py  3551e09fcc16_remove_sequence_no_from_treatment_.py  3e93f2a629b2_initial_migration.py  68675f0d6ca9_refactor_treatment_images_storage.py  799358ba1e35_rename_treatment_session_id_to_session_.py  8a528619101a_add_uploaded_image_and_treatment_.py  9bd7b1c508ed_add_photo_type_to_treatment_session_.py  add_user_tokens_table.py  b62450aa6630_add_unique_constraint_to_shop_email.py  c0c4707ad8b7_add_color_recipe_columns_to_skin_color_.py  c4d3be2c4a8e_add_thumbnail_columns_to_uploaded_image.py  f6e2737481ae_add_sequence_to_treatment_session.py
backend/app/: config.py  deps.py  main.py
backend/app/ai/: client.py
backend/app/core/: auth.py  exceptions.py  pagination.py  security.py  uploads.py
backend/app/db/: base.py  session.py
backend/app/schemas/: auth.py  color_recipes_request.py  color_recipes_response.py  common.py  customer_request.py  customer_response.py  item.py  shop_request.py  shop_response.py  skin_measurements_request.py  skin_measurements_response.py  treatment_photos_request.py  treatment_photos_response.py  treatment_request.py  treatment_response.py  treatment_sessions_request.py  treatment_sessions_response.py  uploads_response.py  user.py
backend/app/scripts/: init_db.py  seed.py
backend/app/services/: color_recipe_ai_service.py  color_recipes_service.py  customer_service.py  item_service.py  shop_service.py  skin_measurements_service.py  treatment_photos_service.py  treatment_service.py  treatment_sessions_service.py  upload_service.py  user_service.py
backend/tests/: conftest.py  test_auth.py  test_items.py  test_mermaid_parser.py  test_sqlalchemy_emitter.py
backend/tests/api/: test_ai.py  test_auth_flow.py  test_customer_detail.py  test_shop_create_api_v1_shops.py  test_shop_delete_api_v1_shops_by_id.py  test_shop_get_api_v1_shops_by_id.py  test_shop_list_api_v1_shop_summary.py  test_shop_list_api_v1_shops.py  test_uploads_download.py  (+1 more)
backend/tools/: generate_models_from_mermaid.py  generate_routes_from_excel.py
(+140 files in other folders)
